# vibeshield

./: .gitignore  LICENSE  README.md  diagnose_groq.py  main.py  offline.txt  online.txt  pyinstaller_entry.py  pyproject.toml  test_real_groq_call.py  vibeshield-windows.spec
.github/workflows/: tests.yml  vibeshield-scan.yml
benchmark/: cases.py  run_benchmark.py
src/vibeshield/: __init__.py  baseline.py  cli.py  comment_masking.py  developer_insights.py  file_reader.py  graph.py  groq_client.py  hallucination_filter.py  reporting.py  sarif_export.py  secret_redaction.py  state.py
src/vibeshield/nodes/: __init__.py  classify_risk_surface.py  deep_vulnerability_read.py  explain_remediate.py  scan_repo.py
tests/: test_detection_accuracy.py  test_developer_insights.py  test_privacy.py
tests/fixtures/vuln_sample/: Dockerfile  app.py  package.json
