[project]
name = "vibeshield"
version = "0.2.0"
description = "Defensive-only security scanner for AI-generated (\"vibe coded\") web app and API source code."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Jaisurya" }
]
keywords = ["security", "sast", "static-analysis", "ai-generated-code", "vulnerability-scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "groq>=1.0.0",
    "kafka>=1.3.5",
]

[project.scripts]
vibeshield = "vibeshield.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
